@@ -165,7 +165,7 @@ public class TrainerRandomizersTest extends RandomizerTest {
 
         for (Trainer tr : romHandler.getTrainers()) {
             List<String> beforeStrings = beforeTrainerStrings.get(tr);
-            System.out.println("Before: " + beforeStrings.get(0));
+            System.out.println("Before: " + beforeStrings.getFirst());
             for (int i = 1; i < beforeStrings.size(); i++) {
                 System.out.println("\t" + beforeStrings.get(i));
             }
@@ -175,7 +175,7 @@ public class TrainerRandomizersTest extends RandomizerTest {
                 System.out.println("Type Theme: " + theme);
                 System.out.println("After: " + tr);
                 for (TrainerPokemon tp : tr.getPokemon()) {
-                    Species sp = romHandler.getAltFormeOfSpecies(tp.getSpecies(), tp.getForme());
+                    Species sp = tp.getSpecies();
                     System.out.println("\t" + sp);
                     boolean keepsTheme = sp.getPrimaryType(false) == theme || sp.getSecondaryType(false) == theme;
                     if (!keepsTheme) {
@@ -227,7 +227,7 @@ public class TrainerRandomizersTest extends RandomizerTest {
         for(Trainer trainer : romHandler.getTrainers()) {
             List<Species> speciesPrimaryTypes = new ArrayList<>();
             for (TrainerPokemon tp : trainer.getPokemon()) {
-                speciesPrimaryTypes.add(romHandler.getAltFormeOfSpecies(tp.getSpecies(), tp.getForme()));
+                speciesPrimaryTypes.add(tp.getSpecies());
             }
             trainersWithPokemonTypes.put(trainer, speciesPrimaryTypes);
         }
@@ -304,7 +304,7 @@ public class TrainerRandomizersTest extends RandomizerTest {
     }
 
     private Type getThemedTrainerType(Trainer tr) {
-        Species first = tr.getPokemon().get(0).getSpecies();
+        Species first = tr.getPokemon().getFirst().getSpecies();
         Type primary = first.getPrimaryType(true);
         Type secondary = first.getSecondaryType(true);
         for (int i = 1; i < tr.getPokemon().size(); i++) {
@@ -391,8 +391,8 @@ public class TrainerRandomizersTest extends RandomizerTest {
 
             if (eliteFourIndices.contains(tr.getIndex())) {
                 System.out.println("-E4 Member-");
-                System.out.println("Non-local: " + nonLocal.stream().map(Species::getName).collect(Collectors.toList()));
-                System.out.println("Local: " + localWithRelatives.stream().map(Species::getName).collect(Collectors.toList()));
+                System.out.println("Non-local: " + nonLocal.stream().map(Species::getName).toList());
+                System.out.println("Local: " + localWithRelatives.stream().map(Species::getName).toList());
                 int nonLocalCount = 0;
                 for (TrainerPokemon tp : tr.getPokemon()) {
                     if (nonLocal.contains(tp.getSpecies())) {
@@ -574,7 +574,7 @@ public class TrainerRandomizersTest extends RandomizerTest {
                     System.out.println(tp.getSpecies().getName() + " holds " + tp.getHeldItem());
 
                     int[] pkMoves = tp.isResetMoves() ?
-                            romHandler.getMovesAtLevel(tp.getSpecies().getNumber(), romHandler.getMovesLearnt(), tp.getLevel())
+                            romHandler.getMovesAtLevel(tp.getSpecies(), romHandler.getMovesLearnt(), tp.getLevel())
                             : Arrays.stream(tp.getMoves()).distinct().filter(mv -> mv != 0).toArray();
                     Set<Type> moveTypes = new HashSet<>();
                     for (int moveID : pkMoves) {
@@ -640,9 +640,6 @@ public class TrainerRandomizersTest extends RandomizerTest {
 
             for(TrainerPokemon tp : trainer.getPokemon()) {
                 Species sp = tp.getSpecies();
-                if(tp.getForme() != 0) {
-                    sp = romHandler.getAltFormeOfSpecies(sp, tp.getForme());
-                }
 
                 Type primaryType = sp.getPrimaryType(false);
                 Type secondaryType = sp.getSecondaryType(false);
@@ -696,7 +693,7 @@ public class TrainerRandomizersTest extends RandomizerTest {
                 // Record used original types
                 for (TrainerPokemon tp : trainer.getPokemon()) {
                     if (!tp.isAddedTeamMember()) {
-                        Species sp = romHandler.getAltFormeOfSpecies(tp.getSpecies(), tp.getForme());
+                        Species sp = tp.getSpecies();
                         usedTypes.add(sp.getPrimaryType(false));
                         if (sp.hasSecondaryType(false)) {
                             usedTypes.add(sp.getSecondaryType(false));
@@ -707,7 +704,7 @@ public class TrainerRandomizersTest extends RandomizerTest {
             }
 
             for (TrainerPokemon tp : trainer.getPokemon()) {
-                Species sp = romHandler.getAltFormeOfSpecies(tp.getSpecies(), tp.getForme());
+                Species sp = tp.getSpecies();
 
                 Type primaryType = sp.getPrimaryType(false);
                 Type secondaryType = sp.getSecondaryType(false);
@@ -758,7 +755,7 @@ public class TrainerRandomizersTest extends RandomizerTest {
                     (hasNoTypeTheme ? "no type theme" : "type theme " + theme) + ".");
 
             for (TrainerPokemon tp : trainer.getPokemon()) {
-                Species sp = romHandler.getAltFormeOfSpecies(tp.getSpecies(), tp.getForme());
+                Species sp = tp.getSpecies();
 
                 Type primaryType = sp.getPrimaryType(false);
                 Type secondaryType = sp.getSecondaryType(false);
@@ -821,8 +818,8 @@ public class TrainerRandomizersTest extends RandomizerTest {
             System.out.println(tr);
 
             boolean duplicateHighestLevel = false;
-            TrainerPokemon ace = new TrainerPokemon();
-            ace.setLevel(0);
+            Species dummySpecies = new Species(Integer.MAX_VALUE);
+            TrainerPokemon ace = new TrainerPokemon(dummySpecies, 0);
 
             for (TrainerPokemon tp : tr.getPokemon()) {
                 System.out.println(tp + " added=" + tp.isAddedTeamMember());
@@ -954,7 +951,7 @@ public class TrainerRandomizersTest extends RandomizerTest {
                 int variant = Integer.parseInt(tr.getTag().split("-")[1]);
                 int offset = tr.getTag().contains("RIVAL") ? 1 : 2;
                 Species expected = starters.get((variant + offset) % 3);
-                Species actual = tr.getPokemon().get(0).getSpecies();
+                Species actual = tr.getPokemon().getFirst().getSpecies();
 
                 assertEquals(1, tr.getPokemon().size());
                 assertEquals(expected, actual);
@@ -997,7 +994,7 @@ public class TrainerRandomizersTest extends RandomizerTest {
     private void carryStarterFamiliesCheck() {
         List<SpeciesSet> starterFamilies = romHandler.getStarters()
                 .stream().map(sp -> sp.getFamily(false))
-                .collect(Collectors.toList());
+                .toList();
 
         for (Trainer tr : romHandler.getTrainers()) {
             if (tr.getTag() != null && (tr.getTag().contains("RIVAL") || tr.getTag().contains("FRIEND"))) {
